--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link display-5" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link display-5" href="#forms">Check</a>
+                </li>
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#">Pricing</a>
                 </li>
                 <li class="nav-item">
@@ -42,10 +42,10 @@
                 It uses utility classes for typography and spacing to space content out within the larger container.
             </p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#forms" role="button">Click to check</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Click to check</a>
             </p>
         </div>
-        <div class="container mt-4 text-primary">
+        <div class="container mt-4 text-primary" id="main-content">
             <div class="form-container" id="forms">
                 <form class="form-group" id="form-content">
                     <div class="form-group">
@@ -65,9 +65,8 @@
                     <div class="form-group">
                         <label>Traveled to any affected country:</label>
                         <div class="form-check">
-                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option2" />
+                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" />
                             Yes
-
                             <input type="radio" class="form-check-input ml-4" name="optionsRadios" id="optionsRadios2" value="option2" />
                             No
                         </div>
@@ -107,9 +106,11 @@
                             </label>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block mb-5">Submit</button>
+
+                    <button type="submit" class="btn btn-primary mb-5 w-25">Submit</button>
                 </form>
             </div>
+            <div class="sideDiv">image</div>
         </div>
     </body>
 </html>
