working on the app.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="bootstrap.min.css" />
+
         <title>Covid Symptoms Checker</title>
     </head>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -36,7 +37,7 @@
             <h1 class="display-4">Covid Symptoms Checker</h1>
             <hr class="my-4" />
             <p class="lead text-center p-2">
-                To know more about Covid-19 symptoms
+                <bold>To know more about Covid-19 symptoms</bold>
             </p>
             <p class="lead">
                 <a class="btn btn-primary btn-lg" href="who.com" role="button">Click to check</a>
@@ -51,7 +52,7 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1"> Email address:</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" />
+                        <input type="email" class="form-control" id="userName" aria-describedby="emailHelp" placeholder="Enter email" />
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group col-xs-4">
@@ -74,7 +75,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Tick symptoms felt:</label>
+                        <label>Select symptoms felt:</label>
                         <br />
                         <div class="form-check form-check-inline">
                             <label class="form-check-label">
@@ -108,7 +109,7 @@
                         </div>
                     </div>
 
-                    <button type="submit" class="btn btn-primary mb-5 w-25" id="form-btn">Submit</button>
+                    <button type="button" class="btn btn-primary mb-5 w-25" id="form-btn">Submit</button>
                 </form>
             </div>
             <div class="sideDiv"><img src="/images/covid.jpeg" alt="doctor with nose mask" /></div>
