removed the bg-image from the image folder

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container mt-4 text-primary mt-0" id="main-content">
             <div class="form-container" id="forms">
                 <form class="form-group" id="form-content" name="myForm">
-                    <h2 class="text-center font-weight-bold">Fill the form Below to check for status</h2>
+                    <h2 class="text-center font-weight-lighter">Fill the form below to check for symptoms</h2>
                     <div class="form-group">
                         <label for="name">Name:</label>
                         <input type="text" class="form-control" id="username" placeholder="Enter your fullname" />
